k8s/namespaces/staging1/svc-controle/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: svc-controle
  name: svc-controle
  namespace: staging1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svc-controle
  template:
    metadata:
      labels:
        app: svc-controle
    spec:
      containers:
      - env:
        - name: JAVA_OPTS
          value: -Djavax.net.ssl.trustStore=/usr/local/https/sqfaas.jks -Djavax.net.ssl.trustStorePassword=demosys
        image: sinqia.azurecr.io/fundos/sqctrl/svc-controle:3.0.0.mt-feature-SD197897-migracao-java21-jakarta10
        imagePullPolicy: Always
        name: svc-controle
        ports:
        - containerPort: 8081
        volumeMounts:
        - mountPath: /usr/local/https
          name: truststore
      imagePullSecrets:
      - name: acr-secret
      tolerations:
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
        operator: Exists
      volumes:
      - name: truststore
        secret:
          secretName: sqfaas-files
