k8s/namespaces/staging1/svc-controle/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: svc-controle
  name: svc-controle
  namespace: staging1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8081
  selector:
    app: svc-controle
