k8s/namespaces/staging1/svc-controle/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: svc-ingress
  namespace: staging1
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS, PUT, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type,Authorization,X-Requested-With,x-lockid,Cache-Control,accept-language"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-Frame-Options "ALLOW-FROM https://staging1.sqfaas.dev";
      add_header Content-Security-Policy "frame-ancestors 'self' https://staging1.sqfaas.dev";
spec:
  ingressClassName: nginx-private
  tls:
  - hosts:
    - "staging1.sqfaas.dev"
    secretName: ingress-secret
  rules:
  - host: "staging1.sqfaas.dev"
    http:
      paths:
      - path: /svc-param-favoritos
        pathType: Prefix
        backend:
          service:
            name: svc-param-favoritos
            port:
              number: 80
      - path: /svc-downloader
        pathType: Prefix
        backend:
          service:
            name: svc-downloader
            port:
              number: 80
      - path: /svc-controle
        pathType: Prefix
        backend:
          service:
            name: svc-controle
            port:
              number: 80
